13805 nwamcfg: variable may be used uninitialized Reviewed by: Robert Mustacchi <rm+illumos@fingolfin.org> Approved by: Joshua M. Clulow <josh@sysmgr.org>